tests/csmith/bad/smith000836.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 836
 * Seed:      836
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
struct S0 {
   uint32_t  f0;
    const int16_t  f1;
    volatile int16_t  f2;
   uint64_t  f3;
    volatile int16_t  f4;
   int32_t  f5;
    const  volatile int64_t  f6;
};

/* --- GLOBAL VARIABLES --- */
int32_t g_4 = -1L;
int32_t * volatile g_3 = &g_4;/* VOLATILE GLOBAL g_3 */
struct S0 g_5 = {0x7A9A9718L,0L,0xF5F4L,0x90069F30CC2FDCBALL,0x6BA4L,0xC9D5FAC1L,0x265E3EDFA831EB23LL};/* VOLATILE GLOBAL g_5 */


/* --- FORWARD DECLARATIONS --- */
struct S0  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_3 g_5
 * writes: g_4
 */
struct S0  func_1(void)
{ /* block id: 0 */
    uint64_t l_2 = 1L;
    (*g_3) = (l_2 & (l_2 != (l_2 == 1L)));
    return g_5;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_4 = %d\n", g_4);
    printf("checksum g_5.f0 = %d\n", g_5.f0);
    printf("checksum g_5.f1 = %d\n", g_5.f1);
    printf("checksum g_5.f2 = %d\n", g_5.f2);
    printf("checksum g_5.f3 = %d\n", g_5.f3);
    printf("checksum g_5.f4 = %d\n", g_5.f4);
    printf("checksum g_5.f5 = %d\n", g_5.f5);
    printf("checksum g_5.f6 = %d\n", g_5.f6);
}

/************************ statistics *************************
XXX max struct depth: 1
breakdown:
   depth: 0, occurrence: 3
   depth: 1, occurrence: 1

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 2

XXX total number of pointers: 1

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 0

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 2
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 0
XXX average alias set size: 1

XXX times a non-volatile is read: 4
XXX times a non-volatile is write: 1
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 1
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 83.3

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 3

XXX percentage a fresh-made variable is used: 50
XXX percentage an existing variable is used: 50
********************* end of statistics **********************/

